# dragonfly

./: CMakeLists.txt  go.work.sum
operator/: Makefile  README.md  go.mod  go.sum
operator/api/v1alpha1/: dragonfly_types.go  dragonflydb_types.go  groupversion_info.go  zz_generated.deepcopy.go
operator/cmd/: main.go
operator/config/crd/bases/: dragonflydb.io_dragonflies.yaml  dragonflydb.io_dragonflydbs.yaml
operator/config/rbac/: role.yaml
operator/config/samples/: _v1alpha1_dragonflydb.yaml  kustomization.yaml  v1alpha1_dragonfly.yaml
operator/internal/controller/: dragonfly_controller.go  dragonflydb_controller.go  health_controller.go  suite_test.go  util.go
operator/internal/resources/: const.go  resources.go  version.go
src/: CMakeLists.txt
src/core/: CMakeLists.txt  interpreter.h
src/core/query_parser/: CMakeLists.txt  df_scan.l  grammar.y
src/facade/: CMakeLists.txt  dragonfly_connection.cc  dragonfly_connection.h  dragonfly_listener.cc  facade.cc  facade_types.h  ok_main.cc
src/server/: CMakeLists.txt  common.cc  common.h  conn_context.cc  conn_context.h  db_slice.cc  dfly_main.cc  engine_shard_set.cc  engine_shard_set.h  main_service.cc  main_service.h  replica.cc  script_mgr.h  server_family.cc  server_family.h  server_state.h  string_family.cc  tiered_storage.h  transaction.cc  transaction.h
src/server/journal/: journal.h
tests/dragonfly/: connection_test.py  requirements.txt  resp3_test.py  utility.py
